[workspace]
resolver = "2"
members = [
  "crates/logseq-core",
  "crates/logseq-cli",
  "crates/logseq-ast-to-md",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

# Markdown parsing helpers (optional; may change depending on log-sig specifics)
pulldown-cmark = "0.12"
